--- a/PEweeks/PEweek8.html
+++ b/PEweeks/PEweek8.html
@@ -27,7 +27,7 @@
 									
 											<li><a href="../PEweeks/PEweek 1.html">Introduction</a></li>
 											<li><a href="../PEweeks/PEweek2.html">Webdesign</a></li>
-											<li><a href="../PEweeks/PEweek3.html.">Manufacturing technologie pt 1</a></li>
+											<li><a href="../PEweeks/PEweek3.html">Manufacturing technologie pt 1</a></li>
 											<li><a href="../PEweeks/PEweek4.html">Manufacturing technologie pt 2</a></li>
 											<li><a href="../PEweeks/PEweek5.html">3D Printing</a></li>
 											<li><a href="../PEweeks/PEweek6.html">Manuell Manufacturing</a></li>
